--- a/package.json
+++ b/package.json
@@ -198,7 +198,7 @@
         "rollup-plugin-multi-input": "^1.1.1",
         "shelljs": "^0.8.5",
         "standard-version": "^8.0.0",
-        "storybook-addon-live-examples": "1.0.1",
+        "storybook-addon-live-examples": "^1.0.5",
         "string-hash": "^1.1.3",
         "stylelint": "^12.0.0",
         "stylelint-config-standard": "^20.0.0",
